# MBEA

./: .gitignore  CMakeLists.txt  README.md  hints.txt  main.cpp  notes.txt
report/experiments/: README.md  generate_experimental_data.py  plot_experimental_data.py
report/tex/: Main_Text.tex  nicebib-alpha.bst  refs.bib  report.tex
report/tex/figures/: crown.tex  crown.tikz
src/: Biclique.cpp  Biclique.h  BicliqueFinder.cpp  BicliqueFinder.h  BipartiteGraph.cpp  BipartiteGraph.h  CommandLineParser.cpp  CommandLineParser.h  Vertex.cpp  Vertex.h  VertexSet.cpp  VertexSet.h
tests/: CMakeLists.txt  TestBiclique.cpp  TestBicliqueFinder.cpp  TestBipartiteGraph.cpp  TestCommandLineParser.cpp  TestVertex.cpp  TestVertexSet.cpp  basicTests.cpp
tests/files/: crown_5_5.txt  crown_5_5_output.txt  matrix1.txt
